// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroBanner renders hero banner with title and subtitle 1`] = `
<section
  className="jsx-1932325717"
>
  <h1
    className="jsx-207160566"
  >
    Test title
  </h1>
  <h2
    className="jsx-1570548085"
  >
    Test subtitle
  </h2>
</section>
`;

exports[`HeroBanner renders hero banner with title only 1`] = `
<section
  className="jsx-1932325717"
>
  <h1
    className="jsx-207160566"
  >
    Test title
  </h1>
  
</section>
`;
